--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "author": "FelipeSilva",
   "license": "MIT",
   "scripts": {
+    "dev": "nodemon ./src/app.js",
     "test": "cross-env SECRET_KEY=secret_key jest --forceExit"
   },
   "dependencies": {
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "bcryptjs": "2.4.3",
+    "dotenv": "16.0.2",
+    "express": "4.18.2",
+    "jsonwebtoken": "8.5.1",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.18.0",
     "cross-env": "^7.0.3",
     "jest": "^29.0.3",
+    "nodemon": "^2.0.20",
+    "sucrase": "^3.29.0",
     "supertest": "^6.2.4"
   }
 }
